--- a/index.html
+++ b/index.html
@@ -15,15 +15,19 @@
 </head>
 
 <body>
-  <header class="container flex-dir-row header">
-    <a class="header-logo-blue" href="./index.html"><span>Web</span><span class="header-logo-right">Studio</span></a>
-    <nav class="flex-dir-row">
+  <header class="header flex-dir-row">
+    <div class="container flex-dir-row">
+    <a class="header-logo-blue flex-dir-row" href="./index.html"><span>Web</span><span class="header-logo-right">Studio</span></a>
+    <nav>
       <a class="header-links" href="agencja.html"><span>Agencja</span></a>
       <a class="header-links" href="./portfolio.html"><span>Portfolio</span></a>
       <a class="header-links" href="kontakt.html"><span>Kontakt</span></a>
     </nav>
+    </div>
+    <div class="container flex-dir-row">
     <a class="header-links-contact flex-dir-row" href="mailto:info@devstudio.com"><span>info@devstudio.com</span></a>
     <a class="header-links-contact flex-dir-row" href="tel:48111111111"><span>+48 111 111 111</span></a>
+    </div>
   </header>
   <main>
     <section class="main-button-place container">
