--- a/index.html
+++ b/index.html
@@ -15,16 +15,20 @@
 </head>
 
 <body>
-  <header class="header flex-dir-row">
-    <div class="container flex-dir-row">
-    <a class="header-logo-blue flex-dir-row" href="./index.html"><span>Web</span><span class="header-logo-right">Studio</span></a>
+  <header class="page-header">
+    <div class="container">
+      <div class="logo-container">
+    <a class="header-logo-blue" href="./index.html"><span>Web</span><span class="header-logo-right">Studio</span></a>
+      </div>
     <nav>
+      <div class="header-links-container container">
       <a class="header-links" href="agencja.html"><span>Agencja</span></a>
       <a class="header-links" href="./portfolio.html"><span>Portfolio</span></a>
       <a class="header-links" href="kontakt.html"><span>Kontakt</span></a>
+      </div>
     </nav>
     </div>
-    <div class="container flex-dir-row">
+    <div class="flex-dir-row">
     <a class="header-links-contact flex-dir-row" href="mailto:info@devstudio.com"><span>info@devstudio.com</span></a>
     <a class="header-links-contact flex-dir-row" href="tel:48111111111"><span>+48 111 111 111</span></a>
     </div>
