--- a/index.html
+++ b/index.html
@@ -15,22 +15,20 @@
 </head>
 
 <body>
-  <header class="page-header">
-    <div class="container">
+  <header class="page-header container">
       <div class="logo-container">
     <a class="header-logo-blue" href="./index.html"><span>Web</span><span class="header-logo-right">Studio</span></a>
       </div>
     <nav>
-      <div class="header-links-container container">
+      <div class="header-links-container">
       <a class="header-links" href="agencja.html"><span>Agencja</span></a>
       <a class="header-links" href="./portfolio.html"><span>Portfolio</span></a>
       <a class="header-links" href="kontakt.html"><span>Kontakt</span></a>
       </div>
     </nav>
-    </div>
-    <div class="flex-dir-row">
-    <a class="header-links-contact flex-dir-row" href="mailto:info@devstudio.com"><span>info@devstudio.com</span></a>
-    <a class="header-links-contact flex-dir-row" href="tel:48111111111"><span>+48 111 111 111</span></a>
+    <div class="header-links-contact-container">
+    <a class="header-links-contact" href="mailto:info@devstudio.com"><span>info@devstudio.com</span></a>
+    <a class="header-links-contact" href="tel:48111111111"><span>+48 111 111 111</span></a>
     </div>
   </header>
   <main>
