--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="WebStudio" content="biuro projktowe + development" />
   <title>Studio</title>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.css"/>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.css" />
   <link rel="stylesheet" href="./css/styles.css" />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -16,68 +16,68 @@
 
 <body>
   <header class="page-header container">
-      <div class="logo-container">
-    <a class="header-logo-blue" href="./index.html"><span>Web</span><span class="header-logo-right">Studio</span></a>
-      </div>
+    <div class="logo-container">
+      <a class="header-logo-blue" href="./index.html"><span>Web</span><span class="header-logo-right">Studio</span></a>
+    </div>
     <nav>
       <div class="header-links-container">
-      <a class="header-links" href="agencja.html"><span>Agencja</span></a>
-      <a class="header-links" href="./portfolio.html"><span>Portfolio</span></a>
-      <a class="header-links" href="kontakt.html"><span>Kontakt</span></a>
+        <a class="header-links" href="agencja.html"><span>Agencja</span></a>
+        <a class="header-links" href="./portfolio.html"><span>Portfolio</span></a>
+        <a class="header-links" href="kontakt.html"><span>Kontakt</span></a>
       </div>
     </nav>
     <div class="header-links-contact-container">
-    <a class="header-links-contact" href="mailto:info@devstudio.com"><span>info@devstudio.com</span></a>
-    <a class="header-links-contact" href="tel:48111111111"><span>+48 111 111 111</span></a>
+      <a class="header-links-contact" href="mailto:info@devstudio.com"><span>info@devstudio.com</span></a>
+      <a class="header-links-contact" href="tel:48111111111"><span>+48 111 111 111</span></a>
     </div>
   </header>
   <main>
     <section class="max-width">
       <div class="main-button-place container">
-      <h1>EFEKTYWNE ROZWIĄZANIA<br />DLA WASZEGO BIZNESU</h1>
-      <button class="main-button" type="button">Zamów usługe</button>
-    </div>
+        <h1>EFEKTYWNE ROZWIĄZANIA<br />DLA WASZEGO BIZNESU</h1>
+        <button class="main-button" type="button">Zamów usługe</button>
+      </div>
     </section>
     <section>
       <div class="container">
-      <ul class="main-section">
-        <li>
-          <div>
-            <h4 class="main-section-headings">LOREM IPSUM</h4>
-            <p class="main-section-description">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non
-              sodales dui. Interdum et malesuada
-            </p>
-          </div>
-        </li>
-        <li>
-          <div>
-            <h4 class="main-section-headings">LOREM IPSUM</h4>
-            <p class="main-section-description">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non
-              sodales dui. Interdum et malesuada
-            </p>
-          </div>
-        </li>
-        <li>
-          <div>
-            <h4 class="main-section-headings">LOREM IPSUM</h4>
-            <p class="main-section-description">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non
-              sodales dui. Interdum et malesuada
-            </p>
-          </div>
-        </li>
-        <li>
-          <div>
-            <h4 class="main-section-headings">LOREM IPSUM</h4>
-            <p class="main-section-description">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non
-              sodales dui. Interdum et malesuada
-            </p>
-          </div>
-        </li>
-      </ul>
+        <ul class="main-section">
+          <li>
+            <div>
+              <h4 class="main-section-headings">LOREM IPSUM</h4>
+              <p class="main-section-description">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non
+                sodales dui. Interdum et malesuada
+              </p>
+            </div>
+          </li>
+          <li>
+            <div>
+              <h4 class="main-section-headings">LOREM IPSUM</h4>
+              <p class="main-section-description">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non
+                sodales dui. Interdum et malesuada
+              </p>
+            </div>
+          </li>
+          <li>
+            <div>
+              <h4 class="main-section-headings">LOREM IPSUM</h4>
+              <p class="main-section-description">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non
+                sodales dui. Interdum et malesuada
+              </p>
+            </div>
+          </li>
+          <li>
+            <div>
+              <h4 class="main-section-headings">LOREM IPSUM</h4>
+              <p class="main-section-description">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non
+                sodales dui. Interdum et malesuada
+              </p>
+            </div>
+          </li>
+        </ul>
       </div>
     </section>
     <section class="container">
@@ -97,61 +97,63 @@
     </section>
     <section class="main-section-our-team">
       <div class="container">
-      <h3 class="main-section-our-team-heading">Nasz zespół</h3>
-      <ul class="main-section-our-team-list">
-        <li class="our-team-member-figure">
-          <figure class="no-margin">
-          <img src="./images/productdesigner.jpg" width="270" height="260" alt="personal photo of product designer" />
-          <figcaption>
-          <h3 class="team-name">John Doe</h3>
-          <p class="team-role">Product Designer</p>
-          </figcaption>  
-        </figure>
-        </li>
-        <li class="our-team-member-figure">
-          <figure class="no-margin">
-          <img src="./images/frontenddeveloper.jpg" width="270" height="260"
-            alt="personal photo of Fronted Developer" />
-          <figcaption>
-            <h3 class="team-name">John Doe</h3>
-          <p class="team-role">Frontend Developer</p>
-        </figcaption>
-        </figure>
-        </li>
-        <li class="our-team-member-figure">
-          <figure class="no-margin">
-          <img src="./images/marketing.jpg" width="270" height="260" alt="personal photo of Marketing role person" />
-          <figcaption>
-          <h3 class="team-name">John Doe</h3>
-          <p class="team-role">Marketing</p>
-        </figcaption>
-        </figure>
-        </li>
-        <li class="our-team-member-figure">
-          <figure class="no-margin">
-          <img src="./images/uidesigner.jpg" width="270" height="260" alt="personal photo of UI designer" />
-          <figcaption>
-          <h3 class="team-name">John Doe</h3>
-          <p class="team-role">UI Designer</p>
-          </figcaption>
-        </figure>
-        </li>
-      </ul>
+        <h3 class="main-section-our-team-heading">Nasz zespół</h3>
+        <ul class="main-section-our-team-list">
+          <li class="our-team-member-figure">
+            <figure class="no-margin">
+              <img src="./images/productdesigner.jpg" width="270" height="260"
+                alt="personal photo of product designer" />
+              <figcaption>
+                <h3 class="team-name">John Doe</h3>
+                <p class="team-role">Product Designer</p>
+              </figcaption>
+            </figure>
+          </li>
+          <li class="our-team-member-figure">
+            <figure class="no-margin">
+              <img src="./images/frontenddeveloper.jpg" width="270" height="260"
+                alt="personal photo of Fronted Developer" />
+              <figcaption>
+                <h3 class="team-name">John Doe</h3>
+                <p class="team-role">Frontend Developer</p>
+              </figcaption>
+            </figure>
+          </li>
+          <li class="our-team-member-figure">
+            <figure class="no-margin">
+              <img src="./images/marketing.jpg" width="270" height="260"
+                alt="personal photo of Marketing role person" />
+              <figcaption>
+                <h3 class="team-name">John Doe</h3>
+                <p class="team-role">Marketing</p>
+              </figcaption>
+            </figure>
+          </li>
+          <li class="our-team-member-figure">
+            <figure class="no-margin">
+              <img src="./images/uidesigner.jpg" width="270" height="260" alt="personal photo of UI designer" />
+              <figcaption>
+                <h3 class="team-name">John Doe</h3>
+                <p class="team-role">UI Designer</p>
+              </figcaption>
+            </figure>
+          </li>
+        </ul>
       </div>
     </section>
   </main>
   <footer class="footer">
     <div class="container">
-    <a class="header-logo-blue" href="./index.html"><span>Web</span><span
-        class="header-logo-right-down">Studio</span></a>
-    <address>
-      <ul class="footer-list">
-      <li class="footer-adress">m. Warszawa, Aleje Jerozolimskie 21</li>
-      <li><a class="footer-email" href="mailto:info@example.com">info@example.com</a></li>
-      <li><a class="footer-tel" href="tel:48111111111">+48 111 111 111</a></li>
-    </ul>
-    </address>
-  </div>
+      <a class="header-logo-blue" href="./index.html"><span>Web</span><span
+          class="header-logo-right-down">Studio</span></a>
+      <address>
+        <ul class="footer-list">
+          <li class="footer-adress">m. Warszawa, Aleje Jerozolimskie 21</li>
+          <li><a class="footer-email" href="mailto:info@example.com">info@example.com</a></li>
+          <li><a class="footer-tel" href="tel:48111111111">+48 111 111 111</a></li>
+        </ul>
+      </address>
+    </div>
   </footer>
 </body>
 
