--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   </header>
   <main>
     <section class="max-width">
-      <div class="main-button-place container">
+      <div class="main-button-place">
         <h1>EFEKTYWNE ROZWIĄZANIA<br />DLA WASZEGO BIZNESU</h1>
         <button class="main-button" type="button">Zamów usługe</button>
       </div>
@@ -42,45 +42,37 @@
       <div class="container">
         <ul class="main-section">
           <li>
-            <div>
-              <h4 class="main-section-headings">LOREM IPSUM</h4>
-              <p class="main-section-description">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non
-                sodales dui. Interdum et malesuada
-              </p>
-            </div>
+            <h4 class="main-section-headings">LOREM IPSUM</h4>
+            <p class="main-section-description">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non
+              sodales dui. Interdum et malesuada
+            </p>
           </li>
           <li>
-            <div>
-              <h4 class="main-section-headings">LOREM IPSUM</h4>
-              <p class="main-section-description">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non
-                sodales dui. Interdum et malesuada
-              </p>
-            </div>
+            <h4 class="main-section-headings">LOREM IPSUM</h4>
+            <p class="main-section-description">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non
+              sodales dui. Interdum et malesuada
+            </p>
           </li>
           <li>
-            <div>
-              <h4 class="main-section-headings">LOREM IPSUM</h4>
-              <p class="main-section-description">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non
-                sodales dui. Interdum et malesuada
-              </p>
-            </div>
+            <h4 class="main-section-headings">LOREM IPSUM</h4>
+            <p class="main-section-description">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non
+              sodales dui. Interdum et malesuada
+            </p>
           </li>
           <li>
-            <div>
-              <h4 class="main-section-headings">LOREM IPSUM</h4>
-              <p class="main-section-description">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non
-                sodales dui. Interdum et malesuada
-              </p>
-            </div>
+            <h4 class="main-section-headings">LOREM IPSUM</h4>
+            <p class="main-section-description">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non
+              sodales dui. Interdum et malesuada
+            </p>
           </li>
         </ul>
       </div>
     </section>
-    <section class="container">
+    <section>
       <h3 class="what-we-do">Czym się zajmujemy</h3>
       <ul class="what-we-do-presentation">
         <li>
