--- a/portfolio.html
+++ b/portfolio.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="WebStudio" content="biuro projktowe + development" />
   <title>Portfolio</title>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.css"/>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.css" />
   <link rel="stylesheet" href="./css/styles.css" />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -15,15 +15,21 @@
 </head>
 
 <body>
-  <header>
-    <a class="header-logo-blue" href="./index.html"><span>Web</span><span class="header-logo-right">Studio</span></a>
+  <header class="page-header container">
+    <div class="logo-container">
+      <a class="header-logo-blue" href="./index.html"><span>Web</span><span class="header-logo-right">Studio</span></a>
+    </div>
     <nav>
-      <a class="header-links" href="agencja.html"><span>Agencja</span></a>
-      <a class="header-portfolio" href="./portfolio.html"><span>Portfolio</span></a>
-      <a class="header-links" href="kontakt.html"><span>Kontakt</span></a>
+      <div class="header-links-container">
+        <a class="header-links" href="agencja.html"><span>Agencja</span></a>
+        <a class="header-portfolio" href="./portfolio.html"><span>Portfolio</span></a>
+        <a class="header-links" href="kontakt.html"><span>Kontakt</span></a>
+      </div>
     </nav>
-    <a class="header-links-contact" href="mailto:info@devstudio.com"><span>info@devstudio.com</span></a>
-    <a class="header-links-contact" href="tel:48111111111"><span>+48 111 111 111</span></a>
+    <div class="header-links-contact-container">
+      <a class="header-links-contact" href="mailto:info@devstudio.com"><span>info@devstudio.com</span></a>
+      <a class="header-links-contact" href="tel:48111111111"><span>+48 111 111 111</span></a>
+    </div>
   </header>
   <main>
     <div>
@@ -50,10 +56,14 @@
       <!--Sekcja w której znajdują się sekcje/obrazy produktów-->
       <ul class="portfolio-main-section">
         <li>
+          <figure class="portfolio-main-section-figure">
           <img src="./images/laptopwithportfolio.jpg" width="370" height="294"
             alt="laptop with main portfolio page open" />
+            <figcaption>
           <h4 class="portfolio-h-title">Technocrack</h4>
           <p class="portfolio-description">Strona Internetowa</p>
+            </figcaption>  
+          </figure>
         </li>
         <li>
           <img src="./images/basketballplayers.jpg" width="370" height="294" alt="Basketball players at game" />
@@ -98,16 +108,20 @@
         </li>
       </ul>
     </section>
-    <footer class="footer">
+  </main>
+  <footer class="footer">
+    <div class="container">
       <a class="header-logo-blue" href="./index.html"><span>Web</span><span
           class="header-logo-right-down">Studio</span></a>
-      <address class="footer">
-        <p class="footer-adress">m. Warszawa, Aleje Jerozolimskie 21</p>
-        <a class="footer-email-portfolio-underline" href="mailto:info@example.com">info@example.com</a>
-        <a class="footer-tel" href="tel:48111111111">+48 111 111 111</a>
+      <address>
+        <ul class="footer-list">
+          <li class="footer-adress">m. Warszawa, Aleje Jerozolimskie 21</li>
+          <li><a class="footer-email-portfolio-underline" href="mailto:info@example.com">info@example.com</a></li>
+          <li><a class="footer-tel" href="tel:48111111111">+48 111 111 111</a></li>
+        </ul>
       </address>
-    </footer>
-  </main>
+    </div>
+  </footer>
 </body>
 
 </html>
