--- a/portfolio.html
+++ b/portfolio.html
@@ -52,59 +52,73 @@
         </li>
       </ul>
     </div>
-    <section>
+    <section class="container">
       <!--Sekcja w której znajdują się sekcje/obrazy produktów-->
       <ul class="portfolio-main-section">
-        <li>
-          <figure class="portfolio-main-section-figure">
+        <li class="portfolio-elements">
           <img src="./images/laptopwithportfolio.jpg" width="370" height="294"
             alt="laptop with main portfolio page open" />
-            <figcaption>
-          <h4 class="portfolio-h-title">Technocrack</h4>
-          <p class="portfolio-description">Strona Internetowa</p>
-            </figcaption>  
-          </figure>
+          <div class="portfolio-element-border">
+            <h4 class="portfolio-h-title">Technocrack</h4>
+            <p class="portfolio-description">Strona Internetowa</p>
+          </div>
         </li>
-        <li>
+        <li class="portfolio-elements">
           <img src="./images/basketballplayers.jpg" width="370" height="294" alt="Basketball players at game" />
-          <h4 class="portfolio-h-title">Grafika New Orlean vs Golden Star</h4>
-          <p class="portfolio-description">Dizajn</p>
+          <div class="portfolio-element-border">
+            <h4 class="portfolio-h-title">Grafika New Orlean vs Golden Star</h4>
+            <p class="portfolio-description">Dizajn</p>
+          </div>
         </li>
-        <li>
+        <li class="portfolio-elements">
           <img src="./images/seafoodrestaurant.jpg" width="370" height="294"
             alt="Picture of logo an Seafood restaurant" />
-          <h4 class="portfolio-h-title">Restaurant Seafood</h4>
-          <p class="portfolio-description">Aplikacja</p>
+          <div class="portfolio-element-border">
+            <h4 class="portfolio-h-title">Restaurant Seafood</h4>
+            <p class="portfolio-description">Aplikacja</p>
+          </div>
         </li>
-        <li>
+        <li class="portfolio-elements">
           <img src="./images/headphone.jpg" width="370" height="294" alt="Image of headphone" />
-          <h4 class="portfolio-h-title">Projekt Prime</h4>
-          <p class="portfolio-description">Marketing</p>
+          <div class="portfolio-element-border">
+            <h4 class="portfolio-h-title">Projekt Prime</h4>
+            <p class="portfolio-description">Marketing</p>
+          </div>
         </li>
-        <li>
+        <li class="portfolio-elements">
           <img src="./images/boxes.jpg" width="370" height="294" alt="Image with project of boxes" />
-          <h4 class="portfolio-h-title">Projekt Boxes</h4>
-          <p class="portfolio-description">Aplikacja</p>
+          <div class="portfolio-element-border">
+            <h4 class="portfolio-h-title">Projekt Boxes</h4>
+            <p class="portfolio-description">Aplikacja</p>
+          </div>
         </li>
-        <li>
+        <li class="portfolio-elements">
           <img src="./images/darkscreen.jpg" width="370" height="294" alt="Image of screen shows dark modern website" />
-          <h4 class="portfolio-h-title">Inspiration has no Boders</h4>
-          <p class="portfolio-description">Strona Internetowa</p>
+          <div class="portfolio-element-border">
+            <h4 class="portfolio-h-title">Inspiration has no Boders</h4>
+            <p class="portfolio-description">Strona Internetowa</p>
+          </div>
         </li>
-        <li>
+        <li class="portfolio-elements">
           <img src="./images/bookwithpictures.jpg" width="370" height="294" alt="Book with pictures on pages" />
-          <h4 class="portfolio-h-title">Magazyn Limited Edition</h4>
-          <p class="portfolio-description">Dizajn</p>
+          <div class="portfolio-element-border">
+            <h4 class="portfolio-h-title">Magazyn Limited Edition</h4>
+            <p class="portfolio-description">Dizajn</p>
+          </div>
         </li>
-        <li>
+        <li class="portfolio-elements">
           <img src="./images/label.jpg" width="370" height="294" alt="Image of label project" />
-          <h4 class="portfolio-h-title">Projeky LAB</h4>
-          <p class="portfolio-description">Marketing</p>
+          <div class="portfolio-element-border">
+            <h4 class="portfolio-h-title">Projeky LAB</h4>
+            <p class="portfolio-description">Marketing</p>
+          </div>
         </li>
-        <li>
+        <li class="portfolio-elements">
           <img src="./images/workonlaptop.jpg" width="370" height="294" alt="images/workonlaptop.jpg" />
-          <h4 class="portfolio-h-title">Growing Business</h4>
-          <p class="portfolio-description">Aplikacja</p>
+          <div class="portfolio-element-border">
+            <h4 class="portfolio-h-title">Growing Business</h4>
+            <p class="portfolio-description">Aplikacja</p>
+          </div>
         </li>
       </ul>
     </section>
