--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
 </head>
 
 <body>
-  <header class="page-header container">
+  <header class="page-header">
+    <div class="class1 container">
     <div class="logo-container">
       <a class="header-logo-blue" href="./index.html"><span>Web</span><span class="header-logo-right">Studio</span></a>
     </div>
@@ -30,16 +31,18 @@
       <a class="header-links-contact" href="mailto:info@devstudio.com"><span>info@devstudio.com</span></a>
       <a class="header-links-contact" href="tel:48111111111"><span>+48 111 111 111</span></a>
     </div>
+    </div>
   </header>
   <main>
-    <section class="max-width">
+    <section>
       <div class="main-button-place">
         <h1>EFEKTYWNE ROZWIĄZANIA<br />DLA WASZEGO BIZNESU</h1>
         <button class="main-button" type="button">Zamów usługe</button>
       </div>
     </section>
-    <section>
-      <div class="container">
+    <section class="container">
+      <div class="class3">
+      <div class="class2">
         <ul class="main-section">
           <li>
             <h4 class="main-section-headings">LOREM IPSUM</h4>
@@ -71,9 +74,11 @@
           </li>
         </ul>
       </div>
-    </section>
-    <section>
+      <div class="gap50">
+      <div>
       <h3 class="what-we-do">Czym się zajmujemy</h3>
+      </div>
+      <div>
       <ul class="what-we-do-presentation">
         <li>
           <img src="./images/whatwedoone.jpg" width="370" height="294" alt="projecting and coding at the desk" />
@@ -86,16 +91,22 @@
             alt="projecting and coding with full colour patern" />
         </li>
       </ul>
+      </div>
+      </div>
+      </div>
     </section>
     <section class="main-section-our-team">
-      <div class="container">
+      <div class="container gap50">
+        <div>
         <h3 class="main-section-our-team-heading">Nasz zespół</h3>
+        </div>
+        <div>
         <ul class="main-section-our-team-list">
           <li class="our-team-member-figure">
             <figure class="no-margin">
               <img src="./images/productdesigner.jpg" width="270" height="260"
                 alt="personal photo of product designer" />
-              <figcaption>
+              <figcaption class="class5">
                 <h3 class="team-name">John Doe</h3>
                 <p class="team-role">Product Designer</p>
               </figcaption>
@@ -105,7 +116,7 @@
             <figure class="no-margin">
               <img src="./images/frontenddeveloper.jpg" width="270" height="260"
                 alt="personal photo of Fronted Developer" />
-              <figcaption>
+              <figcaption class="class5">
                 <h3 class="team-name">John Doe</h3>
                 <p class="team-role">Frontend Developer</p>
               </figcaption>
@@ -115,7 +126,7 @@
             <figure class="no-margin">
               <img src="./images/marketing.jpg" width="270" height="260"
                 alt="personal photo of Marketing role person" />
-              <figcaption>
+              <figcaption class="class5">
                 <h3 class="team-name">John Doe</h3>
                 <p class="team-role">Marketing</p>
               </figcaption>
@@ -124,26 +135,31 @@
           <li class="our-team-member-figure">
             <figure class="no-margin">
               <img src="./images/uidesigner.jpg" width="270" height="260" alt="personal photo of UI designer" />
-              <figcaption>
+              <figcaption class="class5">
                 <h3 class="team-name">John Doe</h3>
                 <p class="team-role">UI Designer</p>
               </figcaption>
             </figure>
           </li>
         </ul>
-      </div>
+        </div>
+        </div>
     </section>
   </main>
   <footer class="footer">
-    <div class="container">
+    <div class="gap20 container">
+      <div>
       <a class="header-logo-blue" href="./index.html"><span>Web</span><span
           class="header-logo-right-down">Studio</span></a>
-      <address>
+      </div>
+      <div>
+          <address class="class4">
         <ul class="footer-list">
           <li class="footer-adress">m. Warszawa, Aleje Jerozolimskie 21</li>
           <li><a class="footer-email" href="mailto:info@example.com">info@example.com</a></li>
           <li><a class="footer-tel" href="tel:48111111111">+48 111 111 111</a></li>
         </ul>
+        </div>
       </address>
     </div>
   </footer>
