--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <div class="logo-container">
       <a class="header-logo-blue" href="./index.html"><span>Web</span><span class="header-logo-right">Studio</span></a>
     </div>
+    <div class="class6">
     <nav>
       <div class="header-links-container">
         <a class="header-links" href="agencja.html"><span>Agencja</span></a>
@@ -30,6 +31,7 @@
     <div class="header-links-contact-container">
       <a class="header-links-contact" href="mailto:info@devstudio.com"><span>info@devstudio.com</span></a>
       <a class="header-links-contact" href="tel:48111111111"><span>+48 111 111 111</span></a>
+    </div>
     </div>
     </div>
   </header>
