--- a/portfolio.html
+++ b/portfolio.html
@@ -36,7 +36,7 @@
     </div>
   </header>
   <main>
-    <div>
+    <div class="gap502">
       <!-- sekcja, która zawiera listę przycisków -->
       <ul class="portfolio-button-list">
         <li>
@@ -55,8 +55,7 @@
           <button class="portfolio-button" type="button">Marketing</button>
         </li>
       </ul>
-    </div>
-    <section class="container">
+    <section>
       <!--Sekcja w której znajdują się sekcje/obrazy produktów-->
       <ul class="portfolio-main-section">
         <li class="portfolio-elements">
@@ -126,6 +125,7 @@
         </li>
       </ul>
     </section>
+    </div>
   </main>
   <footer class="footer">
     <div class="gap20 container">
