--- a/portfolio.html
+++ b/portfolio.html
@@ -15,12 +15,10 @@
 </head>
 
 <body>
-  <header class="page-header">
-    <div class="class1 container">
+  <header class="page-header container">
     <div class="logo-container">
       <a class="header-logo-blue" href="./index.html"><span>Web</span><span class="header-logo-right">Studio</span></a>
     </div>
-    <div class="class6">
     <nav>
       <div class="header-links-container">
         <a class="header-links" href="agencja.html"><span>Agencja</span></a>
@@ -31,8 +29,6 @@
     <div class="header-links-contact-container">
       <a class="header-links-contact" href="mailto:info@devstudio.com"><span>info@devstudio.com</span></a>
       <a class="header-links-contact" href="tel:48111111111"><span>+48 111 111 111</span></a>
-    </div>
-    </div>
     </div>
   </header>
   <main>
@@ -128,19 +124,15 @@
     </div>
   </main>
   <footer class="footer">
-    <div class="gap20 container">
-      <div>
+    <div class="container">
       <a class="header-logo-blue" href="./index.html"><span>Web</span><span
           class="header-logo-right-down">Studio</span></a>
-      </div>
-      <div>
-          <address class="class4">
+      <address>
         <ul class="footer-list">
           <li class="footer-adress">m. Warszawa, Aleje Jerozolimskie 21</li>
           <li><a class="footer-email-portfolio-underline" href="mailto:info@example.com">info@example.com</a></li>
           <li><a class="footer-tel" href="tel:48111111111">+48 111 111 111</a></li>
         </ul>
-        </div>
       </address>
     </div>
   </footer>
